--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="curriculum">curriculum</a></li>
             <li><a href="https://florh.kesug.com/CRUD%20PHP%20MySQL/index.php">Base de datos</a></li>
                 <li><a href="https://florh.kesug.com/Florencio%20Chan%20Couoh/Index.htm">Pagina estatica</a></li>
+             <li> <a href="https://florh.kesug.com/JS_PHP/Curso%20de%20PHP.html">JS_PHP</a></li>
         </ul>
     </nav>
     
